--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 click==8.1.7
 fastapi==0.115.5
+greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
 idna==3.10
 psycopg==3.2.3
+psycopg2-binary==2.9.10
 pydantic==2.10.2
 pydantic_core==2.27.1
 python-dotenv==1.0.1
 PyYAML==6.0.2
 sniffio==1.3.1
+SQLAlchemy==1.4.23
 starlette==0.41.3
 typing_extensions==4.12.2
 uvicorn==0.32.1
