--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bcrypt==4.2.1
 click==8.1.7
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.5
 greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
 idna==3.10
+passlib==1.7.4
 psycopg==3.2.3
 psycopg2-binary==2.9.10
 pydantic==2.10.2
