--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
 bcrypt==4.2.1
+cffi==1.17.1
 click==8.1.7
+cryptography==44.0.0
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.5
 greenlet==3.1.1
@@ -12,10 +15,15 @@ idna==3.10
 passlib==1.7.4
 psycopg==3.2.3
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 python-dotenv==1.0.1
+python-jose==3.3.0
 PyYAML==6.0.2
+rsa==4.9
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==1.4.23
 starlette==0.41.3
