login and return token

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pydantic==2.10.2
 pydantic_core==2.27.1
 python-dotenv==1.0.1
 python-jose==3.3.0
+python-multipart==0.0.19
 PyYAML==6.0.2
 rsa==4.9
 six==1.17.0
