--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.2
+pydantic-settings==2.6.1
 pydantic_core==2.27.1
 python-dotenv==1.0.1
 python-jose==3.3.0
