--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 bcrypt==4.2.1
@@ -12,6 +13,8 @@ greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
 idna==3.10
+Mako==1.3.8
+MarkupSafe==3.0.2
 passlib==1.7.4
 psycopg==3.2.3
 psycopg2-binary==2.9.10
