--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,10 @@ greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
 idna==3.10
+legacycrypt==0.3
+libpass @ git+https://github.com/ThirVondukr/passlib.git@1937891ee1f4e6b99e3ccc9b7eef91c180178034
 Mako==1.3.8
 MarkupSafe==3.0.2
-passlib==1.7.4
 psycopg==3.2.3
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
